知道了router模块的用法； 了解了ejs中模板的用法和前后台传递参数的方法。 更新了readme 补充今天看到的文档

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,2 @@
-<div class="well jumbotron">
-    <h1><%= title %></h1>
-    <img src="public/main1.png"/>
-</div>
+<h1><%= title %></h1>
+<p>Welcome to <%= title %></p>
