--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,5 +4,5 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="http://unslider.com/unslider.js"></script>
