--- a/views/mac.ejs
+++ b/views/mac.ejs
@@ -1,14 +1,6 @@
-<script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
-<script src="http://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-</body>
-</html>
-<header>
-</header>
+<% include header.ejs%>
 <div class="well jumbotron">
     <h1><%= title %></h1>
 </div>
 
-<script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
-<script src="http://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+<% include footer.ejs%>
